# simpler-orion-proxy

./: .dockerignore  .gitignore  .gitmodules  AUTHORS.md  CODE_OF_CONDUCT.md  Cargo.toml  OWNERS  README.md  RELEASE-NOTES.md  clippy.toml  rustfmt.toml
docker/: Dockerfile  Dockerfile_dev  orion-compose.yaml  orion-runtime.yaml  replace_control_plane.sh  start_proxy.sh
docs/: components.plantuml  demos.md  kmesh-subproject.md
docs/performance/: performance.md
docs/videos/: orion-demo-lb.webm
envoy-data-plane-api/: Cargo.toml  build.rs
envoy-data-plane-api/src/: lib.rs
orion-client/: Cargo.toml
orion-client/src/client/legacy/: client.rs  pool.rs
orion-client/src/client/legacy/connect/: mod.rs
orion-configuration/: Cargo.toml  bootstrap.yaml  ng.yaml
orion-configuration/examples/: convert.rs
orion-configuration/src/: config.rs  lib.rs  main.rs  options.rs
orion-configuration/src/config/: README.md  bootstrap.rs  cluster.rs  common.rs  core.rs  grpc.rs  listener.rs  listener_filters.rs  log.rs  metrics.rs  network_filters.rs  runtime.rs  secret.rs  transport.rs  util.rs
orion-configuration/src/config/cluster/: cluster_specifier.rs  health_check.rs  http_protocol_options.rs
orion-configuration/src/config/network_filters/: access_log.rs  http_connection_manager.rs  network_rbac.rs  tcp_proxy.rs  tracing.rs
orion-configuration/src/config/network_filters/http_connection_manager/: header_matcher.rs  header_modifer.rs  http_filters.rs  route.rs
orion-configuration/src/config/network_filters/http_connection_manager/http_filters/: http_rbac.rs  local_rate_limit.rs  router.rs
orion-configuration/tests/: test_configuration.rs
orion-configuration/tests/access_log/: hcm_file_bad_name.yaml  hcm_file_default.yaml  hcm_file_name_mismatch.yaml  hcm_file_with_bad_format.yaml  hcm_file_with_format.yaml  hcm_file_without_path.yaml
orion-configuration/tests/yaml/: config_bad.yaml
orion-data-plane-api/: Cargo.toml
orion-data-plane-api/src/: decode.rs  lib.rs
orion-data-plane-api/src/bootstrap_loader/: bootstrap.rs  mod.rs
orion-data-plane-api/src/envoy_validation/: mod.rs
orion-data-plane-api/src/xds/: bindings.rs  client.rs  mod.rs  model.rs
orion-data-plane-api/tests/: bootstrap.rs  bootstrap_with_dynamic_resource.yml  bootstrap_with_http_connection_manager.yml  bootstrap_with_http_filters.yml  bootstrap_with_tcp_proxy.yml  bootstrap_with_tls_server.yml  bootstrap_with_weighted_cluster.yml  envoy_validation.rs  xds.rs
orion-error/: Cargo.toml
orion-error/src/: lib.rs
orion-format/: Cargo.toml
orion-format/benches/: benchmark.rs
orion-format/src/: context.rs  grammar.rs  lib.rs  operator.rs  types.rs
orion-http-header/: Cargo.toml
orion-http-header/src/: lib.rs
orion-interner/: Cargo.toml
orion-interner/src/: lib.rs
orion-lib/: Cargo.toml  README.md
orion-lib/src/: access_log.rs  lib.rs  thread_local.rs  utils.rs
orion-lib/src/access_log/: deferred_init.rs  log_writer.rs  logger.rs  pool.rs
orion-lib/src/body/: body_with_metrics.rs  body_with_timeout.rs  mod.rs  poly_body.rs  response_flags.rs  timeout_body.rs
orion-lib/src/clusters/: cached_watch.rs  cluster.rs  clusters_manager.rs  load_assignment.rs  mod.rs  retry_policy.rs
orion-lib/src/clusters/balancers/: default_balancer.rs  hash_policy.rs  healthy.rs  least.rs  maglev.rs  mod.rs  priority.rs  random.rs  ring.rs  wrr.rs
orion-lib/src/clusters/cluster/: dynamic.rs  original_dst.rs  static.rs
orion-lib/src/clusters/health/: counter.rs  manager.rs  mod.rs
orion-lib/src/clusters/health/checkers/: checker.rs  mod.rs  tests.rs
orion-lib/src/clusters/health/checkers/grpc/: mod.rs  tests.rs
orion-lib/src/clusters/health/checkers/http/: mod.rs  tests.rs
orion-lib/src/clusters/health/checkers/tcp/: mod.rs  tests.rs
orion-lib/src/configuration/: mod.rs
orion-lib/src/listeners/: access_log.rs  filter_state.rs  filterchain.rs  http_connection_manager.rs  listener.rs  listeners_manager.rs  mod.rs  synthetic_http_response.rs  tcp_proxy.rs
orion-lib/src/listeners/http_connection_manager/: direct_response.rs  http_modifiers.rs  redirect.rs  route.rs  upgrades.rs
orion-lib/src/listeners/rate_limiter/: mod.rs  token_bucket.rs
orion-lib/src/observability/: mod.rs  opentelemetry.rs  prometheus_server.rs
orion-lib/src/observability/opentelemetry/: metric_exporters.rs
orion-lib/src/observability/opentelemetry/metric_exporters/: otel.rs  prometheus.rs  stdout.rs
orion-lib/src/secrets/: mod.rs  secrets_manager.rs
orion-lib/src/secrets/tls_configurator/: configurator.rs  mod.rs  tls_configurator_builder.rs
orion-lib/src/trace/: mod.rs  request_id.rs  trace_id.rs  tracer.rs
orion-lib/src/transport/: bind_device.rs  connector.rs  grpc_channel.rs  http_channel.rs  mod.rs  policy.rs  proxy_protocol.rs  request_context.rs  resolver.rs  tcp_channel.rs  tls_inspector.rs  transport_socket.rs
orion-lib/src/utils/: http.rs  mod.rs  rewindable_stream.rs
orion-metrics/: Cargo.toml
orion-metrics/src/: lib.rs  macros.rs  metrics.rs  sharded.rs
orion-metrics/src/metrics/: clusters.rs  http.rs  listeners.rs  server.rs  tcp.rs  tls.rs
orion-proxy/: Cargo.toml  orion-bootstrap-dyn-empty-start.yaml
orion-proxy/conf/: orion-runtime-grid-router.yaml_old  orion-runtime-health.yaml  orion-runtime-http.yaml  orion-runtime-lb.yaml  orion-runtime-weighted-clusters.yaml  orion-runtime-xds.yaml  orion-runtime.yaml
orion-proxy/conf/demo/: demo-dynamic.yaml  demo-static.yaml  nginx.conf
orion-proxy/src/: admin.rs  core_affinity.rs  lib.rs  main.rs  proxy.rs  runtime.rs  xds_configurator.rs
orion-proxy/src/admin/: config_dump.rs  prometheus.rs
orion-proxy/tests/: configs.rs
orion-xds/: Cargo.toml
orion-xds/examples/: client.rs  server.rs  server_routes_and_loads.rs  server_secret_rotation.rs  server_secret_rotation_simple.rs
orion-xds/src/: lib.rs
orion-xds/src/xds/: bindings.rs  client.rs  mod.rs  model.rs  request.rs  server.rs
orion-xds/src/xds/resources/: converters.rs  mod.rs
test_certs/beefcakeCA-gathered/: beefcake.ca.key.pem  (+7 more)
tools/: add_submodules.sh
(+22 files in other folders)
