[package]
description = "Envoy xDS protobuf and gRPC definitions"
edition = "2021"
license = "MIT"
name = "envoy-data-plane-api"
version = "0.1.9"

[dependencies]
prost.workspace      = true
prost-reflect        = { version = "0.14", features = ["derive", "serde"] }
serde.workspace      = true
serde_json.workspace = true
serde_yaml.workspace = true
tonic                = "^0.12"
tonic-health         = "^0.12"

[build-dependencies]
glob                  = "^0.3"
prost-build.workspace = true
prost-reflect         = { version = "0.14", features = ["derive", "serde"] }
tonic-build.workspace = true


[lib]
doctest = false
