[package]
authors = [
  "Sean McArthur <sean@seanmonstar.com>, Nicola Bonelli <nicola.bonelli@huawei.com>",
]
categories = [
  "network-programming",
  "web-programming::http-client",
  "web-programming::http-server",
]
description = "hyper utilities (orion-client)"
documentation = "https://docs.rs/hyper-util"
edition = "2021"
homepage = "https://hyper.rs"
keywords = ["http", "hyper", "hyperium"]
license = "MIT"
name = "hyper-util"
readme = "README.md"
repository = "https://github.com/hyperium/hyper-util"
rust-version = "1.63"
version = "0.1.15"

[package.metadata.docs.rs]
features     = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = { version = "0.22", optional = true }
bytes = "1.7.1"
futures-channel = { version = "0.3", optional = true }
futures-core = { version = "0.3" }
futures-util = { version = "0.3.16", default-features = false, optional = true }
http = "1.0"
http-body = "1.0.0"
hyper = "1.6.0"
ipnet = { version = "2.9", optional = true }
libc = { version = "0.2", optional = true }
percent-encoding = { version = "2.3", optional = true }
pin-project-lite = "0.2.4"
scopeguard = "1.2.0"
socket2 = { version = "0.5.9", optional = true, features = ["all"] }
tokio = { version = "1", optional = true, default-features = false }
tower-service = { version = "0.3", optional = true }
tracing = { version = "0.1", default-features = false, features = [
  "std",
], optional = true }

[dev-dependencies]
bytes = "1"
futures-util = { version = "0.3.16", default-features = false, features = [
  "alloc",
] }
http-body-util = "0.1.0"
hyper = { version = "1.4.0", features = ["full"] }
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["macros", "signal", "test-util"] }
tokio-test = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
pnet_datalink = "0.35.0"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = { version = "0.6.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-registry = { version = "0.5", optional = true }

[features]
default = []
# enable everything
full = [
  "client",
  "client-legacy",
  "client-proxy",
  "client-proxy-system",
  "http1",
  "http2",
  "server",
  "server-auto",
  "server-graceful",
  "service",
  "tokio",
  "tracing",
]

client = [
  "dep:futures-channel",
  "dep:tower-service",
  "dep:tracing",
  "hyper/client",
]
client-legacy = [
  "client",
  "dep:futures-util",
  "dep:libc",
  "dep:socket2",
  "tokio/sync",
]
client-proxy = ["client", "dep:base64", "dep:ipnet", "dep:percent-encoding"]
client-proxy-system = ["dep:system-configuration", "dep:windows-registry"]

server          = ["hyper/server"]
server-auto     = ["http1", "http2", "server"]
server-graceful = ["server", "tokio/sync"]

service = ["dep:tower-service"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

tokio = ["dep:tokio", "tokio/net", "tokio/rt", "tokio/time"]

tracing = ["dep:tracing"]
