[package]
edition.workspace      = true
license-file.workspace = true
name                   = "orion-configuration"
rust-version.workspace = true
version.workspace      = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
base64-serde = "0.7.0"
bounded-integer = { version = "0.5.8", features = ["serde", "types"] }
bytes.workspace = true
clap = { version = "4.4.8", features = ["derive"] }
compact_str.workspace = true
envoy-data-plane-api = { workspace = true, optional = true }
exponential-backoff.workspace = true
http.workspace = true
http-serde-ext = "1.0.2"
humantime-serde = "1.1.1"
ipnet = { version = "2.9", features = ["serde"] }
itertools = "0.14.0"
num_cpus.workspace = true
opentelemetry-otlp = { version = "0.29.0", features = [
  "serde",
  "serde_json",
  "serialize",
] }
orion-data-plane-api = { workspace = true }
orion-error.workspace = true
orion-format.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
serde_path_to_error = "0.1.16"
serde_regex = "1.1.0"
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"] }
url.workspace = true


[dev-dependencies]
tracing-test.workspace = true

[features]
default           = ["envoy-conversions"]
envoy-conversions = ["dep:envoy-data-plane-api"]


[lints]
workspace = true
