[package]
edition.workspace      = true
license-file.workspace = true
name                   = "orion-metrics"
rust-version.workspace = true
version.workspace      = true

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
metrics  = []

[dependencies]
ahash = "0.8.11"
dashmap = "6.1.0"
http.workspace = true
memory-stats = "1.2.0"
nohash = "0.2.0"
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = [
  "grpc-tonic",
  "http-json",
  "hyper-client",
  "serde",
  "serde_json",
  "serialize",
  "tokio",
  "tonic",
] }
opentelemetry_sdk = "0.29.0"
orion-configuration.workspace = true
orion-interner.workspace = true
parking_lot = "0.12.3"
serde.workspace = true
thread-id = "5.0.0"
tikv-jemalloc-ctl = { version = "0.6.0", optional = true, features = ["stats"] }
tracing.workspace = true
tracing-subscriber.workspace = true
