[package]
description = "next generation cloud native proxy"
edition = "2021"
name = "orion-proxy"
version = "0.1.0"

[[bin]]
name = "orion"
path = "src/main.rs"


[features]
console = ["dep:console-subscriber"]
dhat-heap = ["dep:dhat"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]

dhat = { version = "0.3.3", optional = true }


abort-on-drop.workspace       = true
futures.workspace             = true
num_cpus.workspace            = true
orion-configuration.workspace = true
orion-error.workspace         = true
orion-lib.workspace           = true
orion-xds.workspace           = true
tokio.workspace               = true
tracing.workspace             = true

affinity = "0.1.2"
console-subscriber = { version = "0.4.0", optional = true }
regex = "1.10.2"
serde = { version = "1.0", features = ["rc"] }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = [
  "alloc",
  "env-filter",
  "fmt",
  "registry",
  "std",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
